--- a/webpack_academind/Project_npm_setup/.babelrc
+++ b/webpack_academind/Project_npm_setup/.babelrc
@@ -8,7 +8,11 @@
                 ]
             }
         }],
+        "stage-2",
         "react"
+    ],
+    "plugins": [
+        "syntax-dynamic-import"
     ]
 
 }
