--- a/webpack_academind/Project_npm_setup/package.json
+++ b/webpack_academind/Project_npm_setup/package.json
@@ -30,6 +30,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1"
